@@ -11,8 +11,8 @@
 }
 
 % do not mess with the 2 lines below, they are written by make dist
-\release{2.7}
-\date{December 16, 2000}
+\release{2.7.1}
+\date{December 18, 2000}
 
 \makeindex			% tell \index to actually write the .idx file
 \makemodindex			% If this contains a lot of module sections.
