@@ -1,6 +1,6 @@
 #define MPV_MAJOR 2
 #define MPV_MINOR 7
-#define MPV_PATCH 0
+#define MPV_PATCH 1
 #define MPV_BUILD 0
 
-#define MPV_STRING "2.7"
+#define MPV_STRING "2.7.1"
