@@ -44,7 +44,7 @@
  *
  * serverobject.c 
  *
- * $Id: serverobject.c,v 1.3 2000/12/06 03:05:38 gtrubetskoy Exp $
+ * $Id: serverobject.c,v 1.4 2000/12/18 19:50:03 gtrubetskoy Exp $
  *
  */
 
@@ -224,7 +224,7 @@ static PyObject * server_getattr(serverobject *self, char *name)
 }
 
 PyTypeObject MpServer_Type = {
-    PyObject_HEAD_INIT(&PyType_Type)
+    PyObject_HEAD_INIT(NULL)
     0,
     "mp_server",
     sizeof(serverobject),
